--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,7 @@
 @import "{{site.theme}}"
 .main-content{
-	h1{
-		color:#ff0000;
+	h1,h2,h3,h4,h5,h6{
+		color:$section-headings-color;
+		font-weight:normal;
 	}
 }
