--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,8 +1,12 @@
 @import "{{site.theme}}"
-$sec-headings-color: #2c02b8;
+.page-header{
+	color:#ffff;
+	background-color:#A067AB;
+	background-image:lineal-gradient{120deg,#5073B8,#A067AB};
+	
 .main-content{
 	h1,h2,h3,h4,h5,h6{
-		color:$sec-headings-color;
+		color:#2c02b8;
 		font-weight:normal;
 	}
 }
