--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,12 +2,12 @@
 .page-header{
 	color:#ffff;
 	background-color:#A067AB;
-	background-image:lineal-gradient{120deg,#5073B8,#A067AB}
-};
+	background-image:lineal-gradient{120deg,#5073B8,#A067AB};
+}
 	
 .main-content{
 	h1,h2,h3,h4,h5,h6{
 		color:#2c02b8;
 		font-weight:normal;
 	}
-};
+}
