--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 .page-header{
 	color:#ffff;
 	background-color:#A067AB;
-	background-image:lineal-gradient{120deg,#5073B8,#A067AB};
+	background-image:lineal-gradient(120deg,#5073B8,#A067AB);
 }
 	
 .main-content{
