--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,12 +2,12 @@
 ---
 
 @import "{{site.theme}}";
-.page-header{
+.page_header{
 	color:#8A1414;
 	background-color:#A067AB;
 }
 	
-.main-content{
+.main_content{
 	h1,h2,h3,h4,h5,h6{
 		color:#2c02b8;
 		font-weight:normal;
