--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 
 @import "{{ site.theme }}";
-.page-header{
+.page_header{
 color:#ffff;
 background-color:#A067AB;
 background-image:linear-gradient(120deg,#5073B8,#A067AB);
