--- a/assets/style.scss
+++ b/assets/style.scss
@@ -2,8 +2,8 @@
 ---
 
 @import "{{ site.theme }}";
-.page_header{
-color:#ffff;
-background-color:#A067AB;
-background-image:linear-gradient(120deg,#5073B8,#A067AB);
+.main_content{
+	h1,h2,h3,h4,h5,h6{
+		color:#2c02b8;
+		font-weight:normal;
 }
