--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+header {
+  font-color: blue;
+}
+
 body {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
