--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <link rel="stylesheet" href={{ "assets/css/style.css" | relative_url }}>
+    <link rel="stylesheet" href={{ "assets/css/main.css" | relative_url }}>
 {% seo %}
   </head>
 
