--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
-header {
-  font-color: blue;
+body {
+  background-color: lightblue;
 }
 
-body {
-  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 16px;
+h1 {
+  color: navy;
+  margin-left: 20px;
 }
